--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "messenger-get-started",
-  "version": "1.0.0",
-  "description": "Get started example for Messenger Platform",
+  "name": "paulo-bot",
+  "version": "0.1.0",
+  "description": "A bot for Facebook Messenger",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
@@ -10,9 +10,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/fbsamples/messenger-platform-samples.git"
+    "url": "https://github.com/guisers/paulo-bot.git"
   },
-  "author": "Facebook",
+  "author": "Crystal To",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.0",
